# batblip-demo-sounds

./: .env.example  .gitignore  README.md  index.json
sounds/: XC1002572 - Sundevall's Leaf-nosed Bat - Hipposideros caffer.xc.json  XC1081841 - Bruce's Green Pigeon - Treron waalia.xc.json  XC1081963 - Baird's Sandpiper - Calidris bairdii.xc.json  XC1082019 - Identity unknown - Mystery mystery.xc.json  XC540767 - Gentoo Penguin - Pygoscelis papua.xc.json  XC809855 - Queensland Tube-nosed Fruit Bat - Nyctimene robinsoni.xc.json  XC809882 - White-striped Free-tailed Bat - Austronomus australis.xc.json  XC814304 - Leisler's Noctule - Nyctalus leisleri.xc.json  XC817761 - Northern Serotine - Eptesicus nilssonii.xc.json  XC838798 - Eurasian Particolored Bat - Vespertilio murinus.xc.json  XC928094 - Pond Myotis - Myotis dasycneme.xc.json  XC992981 - Jaguar - Panthera onca.xc.json
tools/xc-fetch/: Cargo.toml
tools/xc-fetch/src/: main.rs
