[package]
name = "xc-fetch"
version = "0.1.0"
edition = "2021"
description = "Fetch recording metadata from xeno-canto API v3"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["now"] }
dotenvy = "0.15"
